Upgrade instructions for EE 2.4 on K8s
Signed-off-by: Spike Curtis <spike@tigera.io>

--- a/_includes/master/charts/tigera-secure-lma/templates/monitor-calico.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/monitor-calico.yaml
@@ -779,6 +779,7 @@ spec:
                   path: ca.pem
                 secretName: tigera-es-config
 ---
+{{- if .Values.elasticTseeInstaller.enable }}
 
 apiVersion: batch/v1
 kind: Job
@@ -863,8 +864,8 @@ spec:
 {{- if .Values.elasticTseeInstaller.env }}
 {{ toYaml .Values.elasticTseeInstaller.env | indent 10 }}
 {{- end }}
-
 ---
+{{- end }}
 
 apiVersion: v1
 kind: ServiceAccount
