--- a/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-reporter.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-reporter.yaml
@@ -117,15 +117,15 @@ template:
       volumeMounts:
       - name: elastic-ca-cert-volume
         mountPath: /etc/ssl/elastic/
-      #livenessProbe:
-      #  httpGet:
-      #    path: /liveness
+      livenessProbe:
+        httpGet:
+          path: /liveness
 {{- if eq .Values.platform "gke" }}
-      #    port: 9199
+          port: 9199
 {{- else }}
-      #    port: 9099
+          port: 9099
 {{- end }}
-      #    host: localhost
+          host: localhost
     volumes:
     - name: elastic-ca-cert-volume
       secret:
