--- a/docker-image/scaleloader/Dockerfile.amd64
+++ b/docker-image/scaleloader/Dockerfile.amd64
@@ -5,7 +5,8 @@ RUN apk add curl jq
 ADD entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 ADD bin/scaleloader-amd64 /bin/scaleloader
-ADD playbooks/ /playbooks/
+COPY playbooks/ /playbooks/
+COPY scenarios/ /playbooks/
 WORKDIR /playbooks
 
 ENV RUN_SCENARIO=true
