--- a/_includes/master/manifests/rbac.yaml
+++ b/_includes/master/manifests/rbac.yaml
@@ -139,7 +139,7 @@ rules:
     verbs:
       # Needed for clearing NodeNetworkUnavailable flag.
       - patch
-{{- if eq .Values.datastore "kdd" }}
+{{- if eq .Values.datastore "kubernetes" }}
       # Calico stores some configuration information in node annotations.
       - update
   # Watch for changes to Kubernetes NetworkPolicies.
