--- a/_includes/master/manifests/calico-typha.yaml
+++ b/_includes/master/manifests/calico-typha.yaml
@@ -153,7 +153,7 @@ spec:
               configMapKeyRef:
                 name: {{include "variant_name" . | lower}}-config
                 key: etcd_cert
-{{- else if eq .Values.datastore "kdd" }}
+{{- else if eq .Values.datastore "kubernetes" }}
           # Use Kubernetes API as the backing datastore.
           - name: TYPHA_DATASTORETYPE
             value: "kubernetes"
