--- a/_includes/v2.4/manifests/tigera-federation-controller.yaml
+++ b/_includes/v2.4/manifests/tigera-federation-controller.yaml
@@ -76,7 +76,7 @@ spec:
                 configMapKeyRef:
                   name: {{include "variant_name" . | lower}}-config
                   key: etcd_cert
-{{- else if eq .Values.datastore "kdd" }}
+{{- else if eq .Values.datastore "kubernetes" }}
             # Use Kubernetes API as the backing datastore.
             - name: DATASTORE_TYPE
               value: "kubernetes"
