--- a/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/federation-controller.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/federation-controller.yaml
@@ -2,7 +2,7 @@
 layout: null
 ---
 {% helm --execute templates/tigera-federation-controller.yaml %}
-datastore: kdd
+datastore: kubernetes
 federation:
   enabled: true
 {% endhelm %}
