--- a/v2.4/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only-gke/cnx-mgr-kdd-gke.yaml
+++ b/v2.4/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only-gke/cnx-mgr-kdd-gke.yaml
@@ -2,6 +2,6 @@
 layout: null
 ---
 {% helm tigera-secure-ee --execute templates/manager.yaml %}
-datastore: kdd
+datastore: kubernetes
 platform: gke
 {% endhelm %}
