--- a/v2.4/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only/1.7/crds-only.yaml
+++ b/v2.4/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only/1.7/crds-only.yaml
@@ -2,5 +2,5 @@
 layout: null
 ---
 {% helm --execute templates/kdd-crds.yaml --execute templates/ee-specific-kdd-crds.yaml %}
-datastore: kdd
+datastore: kubernetes
 {% endhelm %}
