--- a/v2.4/getting-started/kubernetes/installation/manifests/app-layer-policy/kubernetes-datastore/policy-only-ecs/calico-node.yaml
+++ b/v2.4/getting-started/kubernetes/installation/manifests/app-layer-policy/kubernetes-datastore/policy-only-ecs/calico-node.yaml
@@ -2,7 +2,7 @@
 layout: null
 ---
 {% helm --execute templates/calico-node.yaml %}
-datastore: kdd
+datastore: kubernetes
 network: ecs
 typha:
   enabled: true
