--- a/v2.4/getting-started/kubernetes/installation/manifests/app-layer-policy/kubernetes-datastore/policy-only/calico.yaml
+++ b/v2.4/getting-started/kubernetes/installation/manifests/app-layer-policy/kubernetes-datastore/policy-only/calico.yaml
@@ -2,7 +2,7 @@
 layout: null
 ---
 {% helm --execute templates/calico-config.yaml --execute templates/calico-etcd-secrets.yaml --execute templates/calico-typha.yaml --execute templates/tigera-federation-sa.yaml --execute templates/tigera-federation-controller.yaml --execute templates/calico-node.yaml --execute templates/configure-canal.yaml --execute templates/calico-kube-controllers.yaml --execute templates/kdd-crds.yaml --execute templates/rbac.yaml %}
-datastore: kdd
+datastore: kubernetes
 typha:
   enabled: true
 app_layer_policy: true
