--- a/v2.4/getting-started/kubernetes/installation/manifests/aws-sg-integration/cloud-controllers.yaml
+++ b/v2.4/getting-started/kubernetes/installation/manifests/aws-sg-integration/cloud-controllers.yaml
@@ -2,7 +2,7 @@
 layout: null
 ---
 {% helm --execute templates/cloud-controllers.yaml %}
-datastore: kdd
+datastore: kubernetes
 network: calico
 cloudControllers:
   enabled: true
