--- a/_includes/master/charts/tigera-secure-ee/templates/compliance/compliance-controller.yaml
+++ b/_includes/master/charts/tigera-secure-ee/templates/compliance/compliance-controller.yaml
@@ -105,7 +105,7 @@ spec:
       containers:
         - name: compliance-controller
           image: {{.Values.complianceController.image}}:{{.Values.complianceController.tag}}
-{{ tuple .Values.complianceController.resources | include "tigera-secure-lma.resourceLimits" | indent 10 -}}
+{{ tuple .Values.complianceController.resources | include "tigera-secure-ee.resourceLimits" | indent 10 -}}
           env:
             - name: LOG_LEVEL
               value: "info"
