--- a/_includes/master/charts/tigera-secure-ee/templates/elastic-storage.yaml
+++ b/_includes/master/charts/tigera-secure-ee/templates/elastic-storage.yaml
@@ -1,4 +1,4 @@
-{{- $elasticMode := include "tigera-secure-lma.elasticsearch.mode" . }}
+{{- $elasticMode := include "tigera-secure-ee.elasticsearch.mode" . }}
 {{- if eq $elasticMode "operator" }}
 # This manifest implements elasticsearch-storage using local host-path volumes.
 # It is not suitable for production use; and only works on single node clusters.
