--- a/_includes/master/charts/tigera-secure-ee/templates/manager-tls.yaml
+++ b/_includes/master/charts/tigera-secure-ee/templates/manager-tls.yaml
@@ -6,4 +6,4 @@ metadata:
   name: cnx-manager-tls
   namespace: calico-monitoring
 data:
-{{ include "tigera-secure-lma.manager.tls" . | indent 2 }}
+{{ include "tigera-secure-ee.manager.tls" . | indent 2 }}
