--- a/_includes/master/charts/tigera-secure-ee/templates/monitor-calico.yaml
+++ b/_includes/master/charts/tigera-secure-ee/templates/monitor-calico.yaml
@@ -1,4 +1,4 @@
-{{- $elasticMode := include "tigera-secure-lma.elasticsearch.mode" . }}
+{{- $elasticMode := include "tigera-secure-ee.elasticsearch.mode" . }}
 ---
 # This manifest includes the following component versions:
 #   quay.io/prometheus/prometheus:{{.Values.prometheus.tag}}
@@ -457,7 +457,7 @@ spec:
       containers:
         - name: fluentd
           image: {{.Values.fluentd.image}}:{{.Values.fluentd.tag}}
-{{ tuple .Values.fluentd.resources | include "tigera-secure-lma.resourceLimits" | indent 10 -}}
+{{ tuple .Values.fluentd.resources | include "tigera-secure-ee.resourceLimits" | indent 10 -}}
           env:
             - name: FLUENT_UID
               value: "0"
@@ -695,7 +695,7 @@ spec:
           containers:
             - name: tigera-es-curator
               image: {{.Values.esCurator.image}}:{{.Values.esCurator.tag}}
-{{ tuple .Values.esCurator.resources | include "tigera-secure-lma.resourceLimits" | indent 14 -}}
+{{ tuple .Values.esCurator.resources | include "tigera-secure-ee.resourceLimits" | indent 14 -}}
               env:
                 - name: ELASTIC_INDEX_SUFFIX
                   valueFrom:
@@ -799,7 +799,7 @@ spec:
       containers:
       - name: install
         image: {{.Values.elasticTseeInstaller.image}}:{{.Values.elasticTseeInstaller.tag}}
-{{ tuple .Values.elasticTseeInstaller.resources | include "tigera-secure-lma.resourceLimits" | indent 8 -}}
+{{ tuple .Values.elasticTseeInstaller.resources | include "tigera-secure-ee.resourceLimits" | indent 8 -}}
         env:
 {{- if eq $elasticMode "external" }}
           - name: ELASTIC_HOST
