--- a/master/getting-started/kubernetes/installation/hosted/cnx/1.7/monitor-calico.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/cnx/1.7/monitor-calico.yaml
@@ -1,6 +1,6 @@
 ---
 layout: null
 ---
-{% helm tigera-secure-lma --execute templates/monitor-calico.yaml %}
+{% helm tigera-secure-ee --execute templates/monitor-calico.yaml %}
 createCustomResources: false
 {% endhelm %}
