--- a/master/getting-started/kubernetes/installation/hosted/cnx/1.7/secure-es/monitor-calico-upgrade.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/cnx/1.7/secure-es/monitor-calico-upgrade.yaml
@@ -1,7 +1,7 @@
 ---
 layout: null
 ---
-{% helm tigera-secure-lma secure-es --execute templates/monitor-calico.yaml %}
+{% helm tigera-secure-ee secure-es --execute templates/monitor-calico.yaml %}
 createCustomResources: false
 elasticTseeInstaller:
   enable: false
