--- a/master/getting-started/openshift/monitor-calico.yaml
+++ b/master/getting-started/openshift/monitor-calico.yaml
@@ -1,7 +1,7 @@
 ---
 layout: null
 ---
-{% helm tigera-secure-lma --execute templates/monitor-calico.yaml %}
+{% helm tigera-secure-ee --execute templates/monitor-calico.yaml %}
 createCustomResources: false
 fluentd:
   runAsPrivileged: true
