--- a/report-types/default/manifests/inventory.yaml
+++ b/report-types/default/manifests/inventory.yaml
@@ -8,27 +8,48 @@ metadata:
 spec:
   downloadTemplates:
   - name: summary.csv
-    template: |
-      startTime,endTime,endpointSelector,namespaceNames,namespaceSelector,serviceAccountNames,serviceAccountSelector,endpointsNumInScope,endpointsNumIngressProtected,endpointsNumEgressProtected,namespacesNumInScope,namespacesNumIngressProtected,namespacesNumEgressProtected,servicesNumInScope,servicesNumIngressProtected
-      {{ dateRfc3339 .StartTime }},{{ dateRfc3339 .EndTime }},{{ .ReportSpec.EndpointsSelection.EndpointSelector }},{{ if .ReportSpec.EndpointsSelection.Namespaces }}{{ join ";" .ReportSpec.EndpointsSelection.Namespaces.Names }},{{ .ReportSpec.EndpointsSelection.Namespaces.Selector }}{{ else }},{{ end }},{{ if .ReportSpec.EndpointsSelection.ServiceAccounts }}{{ join ";" .ReportSpec.EndpointsSelection.ServiceAccounts.Names }},{{ .ReportSpec.EndpointsSelection.ServiceAccounts.Selector }}{{ else }},{{ end }},{{ .EndpointsSummary.NumTotal }},{{ .EndpointsSummary.NumIngressProtected }},{{ .EndpointsSummary.NumEgressProtected }},{{ .NamespacesSummary.NumTotal  }},{{ .NamespacesSummary.NumIngressProtected }},{{ .NamespacesSummary.NumEgressProtected }},{{ .ServicesSummary.NumTotal }},{{ .ServicesSummary.NumIngressProtected }}
+    template: |-
+      {{ $c := csv }}
+      {{- $c := $c.AddColumn "startTime"                     "{{ dateRfc3339 .StartTime }}" }}
+      {{- $c := $c.AddColumn "endTime"                       "{{ dateRfc3339 .EndTime }}" }}
+      {{- $c := $c.AddColumn "endpointSelector"              "{{ if .ReportSpec.EndpointsSelection }}{{ .ReportSpec.EndpointsSelection.EndpointSelector }}{{ end }}" }}
+      {{- $c := $c.AddColumn "namespaceNames"                "{{ if .ReportSpec.EndpointsSelection }}{{ if .ReportSpec.EndpointsSelection.Namespaces }}{{ join \";\" .ReportSpec.EndpointsSelection.Namespaces.Names }}{{ end }}{{ end }}" }}
+      {{- $c := $c.AddColumn "namespaceSelector"             "{{ if .ReportSpec.EndpointsSelection }}{{ if .ReportSpec.EndpointsSelection.Namespaces }}{{ .ReportSpec.EndpointsSelection.Namespaces.Selector }}{{ end }}{{ end }}" }}
+      {{- $c := $c.AddColumn "serviceAccountNames"           "{{ if .ReportSpec.EndpointsSelection }}{{ if .ReportSpec.EndpointsSelection.ServiceAccounts }}{{ join \";\" .ReportSpec.EndpointsSelection.ServiceAccounts.Names }}{{ end }}{{ end }}" }}
+      {{- $c := $c.AddColumn "serviceAccountSelectors"       "{{ if .ReportSpec.EndpointsSelection }}{{ if .ReportSpec.EndpointsSelection.ServiceAccounts }}{{ .ReportSpec.EndpointsSelection.ServiceAccounts.Selector }}{{ end }}{{ end }}" }}
+      {{- $c := $c.AddColumn "endpointsNumInScope"           "{{ .EndpointsSummary.NumTotal }}" }}
+      {{- $c := $c.AddColumn "endpointsNumIngressProtected"  "{{ .EndpointsSummary.NumIngressProtected }}" }}
+      {{- $c := $c.AddColumn "endpointsNumEgressProtected"   "{{ .EndpointsSummary.NumEgressProtected }}" }}
+      {{- $c := $c.AddColumn "namespacesNumInScope"          "{{ .NamespacesSummary.NumTotal }}" }}
+      {{- $c := $c.AddColumn "namespacesNumIngressProtected" "{{ .NamespacesSummary.NumIngressProtected }}" }}
+      {{- $c := $c.AddColumn "namespacesNumEgressProtected"  "{{ .NamespacesSummary.NumEgressProtected }}" }}
+      {{- $c := $c.AddColumn "serviceAccountsNumInScope"     "{{ .EndpointsSummary.NumServiceAccounts }}" }}
+      {{- $c.Render . }}
   - name: endpoints.csv
-    template: |
-      endpoint,ingressProtected,egressProtected,envoyEnabled,appliedPolicies,services
-      {{ range .Endpoints -}}
-      {{ .Endpoint }},{{ .IngressProtected }},{{ .EgressProtected }},{{ .EnvoyEnabled }},{{ join ";" .AppliedPolicies }},{{ join ";" .Services }}
-      {{ end }}
+    template: |-
+      {{ $c := csv }}
+      {{- $c := $c.AddColumn "endpoint"         "{{ .Endpoint }}" }}
+      {{- $c := $c.AddColumn "ingressProtected" "{{ .IngressProtected }}" }}
+      {{- $c := $c.AddColumn "egressProtected"  "{{ .EgressProtected }}" }}
+      {{- $c := $c.AddColumn "envoyEnabled"     "{{ .EnvoyEnabled }}" }}
+      {{- $c := $c.AddColumn "appliedPolicies"  "{{ join \";\" .AppliedPolicies }}" }}
+      {{- $c := $c.AddColumn "services"         "{{ join \";\" .Services }}" }}
+      {{- $c.Render .Endpoints }}
   - name: namespaces.csv
-    template: |
-      name,ingressProtected,egressProtected,envoyEnabled
-      {{ range .Namespaces -}}
-      {{ .Namespace }},{{ .IngressProtected }},{{ .EgressProtected }},{{ .EnvoyEnabled }}
-      {{ end }}
+    template: |-
+      {{ $c := csv }}
+      {{- $c := $c.AddColumn "namespace"        "{{ .Namespace }}" }}
+      {{- $c := $c.AddColumn "ingressProtected" "{{ .IngressProtected }}" }}
+      {{- $c := $c.AddColumn "egressProtected"  "{{ .EgressProtected }}" }}
+      {{- $c := $c.AddColumn "envoyEnabled"     "{{ .EnvoyEnabled }}" }}
+      {{- $c.Render .Namespaces }}
   - name: services.csv
-    template: |
-      name,ingressProtected,envoyEnabled
-      {{ range .Services -}}
-      {{ .Service }},{{ .IngressProtected }},{{ .EnvoyEnabled }}
-      {{ end }}
+    template: |-
+      {{ $c := csv }}
+      {{- $c := $c.AddColumn "service"          "{{ .Service }}" }}
+      {{- $c := $c.AddColumn "ingressProtected" "{{ .IngressProtected }}" }}
+      {{- $c := $c.AddColumn "envoyEnabled"     "{{ .EnvoyEnabled }}" }}
+      {{- $c.Render .Services }}
   includeEndpointData: true
   uiSummaryTemplate:
     name: ui-summary.json
@@ -37,11 +58,7 @@ spec:
       .EndpointsSummary.NumTotal }}},"type":"radialbarchart"},{"data":[{"label":"Protected
       ingress","value":{{ .NamespacesSummary.NumIngressProtected }}}],"heading":"Namespaces","summary":{"label":"Total","total":{{
       .NamespacesSummary.NumTotal }}},"type":"radialbarchart"},{"data":[{"label":"Protected
-      ingress","value":{{ .ServicesSummary.NumIngressProtected }}}],"heading":"Service
-      Accounts","summary":{"label":"Total","total":{{ .ServicesSummary.NumTotal }}},"type":"radialbarchart"},{"data":[{"label":"Protected
       egress","value":{{ .EndpointsSummary.NumEgressProtected }}}],"heading":"Endpoints","summary":{"label":"Total","total":{{
       .EndpointsSummary.NumTotal }}},"type":"radialbarchart"},{"data":[{"label":"Protected
       egress","value":{{ .NamespacesSummary.NumEgressProtected }}}],"heading":"Namespaces","summary":{"label":"Total","total":{{
-      .NamespacesSummary.NumTotal }}},"type":"radialbarchart"},{"data":[{"label":"Protected
-      egress","value":{{ .ServicesSummary.NumEgressProtected }}}],"heading":"Service
-      Accounts","summary":{"label":"Total","total":{{ .ServicesSummary.NumTotal }}},"type":"radialbarchart"}]}'
+      .NamespacesSummary.NumTotal }}},"type":"radialbarchart"}]}'
