--- a/report-types/default/policy-audit.yaml
+++ b/report-types/default/policy-audit.yaml
@@ -1,9 +1,9 @@
 apiVersion: projectcalico.org/v3
 kind: GlobalReportType
 metadata:
-  name: audit
+  name: policy-audit
   labels:
-    global-report-type: audit
+    global-report-type: policy-audit
 spec:
   uiSummaryTemplate:
     name: ui-summary.json
