oo1 add node selector to compliance manifests

--- a/_includes/master/charts/tigera-secure-ee/templates/compliance/compliance-controller.yaml
+++ b/_includes/master/charts/tigera-secure-ee/templates/compliance/compliance-controller.yaml
@@ -92,6 +92,8 @@ spec:
       labels:
         k8s-app: compliance-controller
     spec:
+      nodeSelector:
+        beta.kubernetes.io/os: linux
       serviceAccountName: tigera-compliance-controller
       tolerations:
         - key: node-role.kubernetes.io/master
