--- a/_includes/v2.4/charts/tigera-secure-ee/templates/compliance/compliance-reporter-pod.yaml
+++ b/_includes/v2.4/charts/tigera-secure-ee/templates/compliance/compliance-reporter-pod.yaml
@@ -6,6 +6,8 @@ metadata:
   labels:
     k8s-app: compliance-reporter
 spec:
+  nodeSelector:
+    beta.kubernetes.io/os: linux
   serviceAccountName: tigera-compliance-reporter
   tolerations:
     - key: node-role.kubernetes.io/master
