--- a/_includes/v2.4/charts/tigera-secure-ee/templates/compliance/compliance-server.yaml
+++ b/_includes/v2.4/charts/tigera-secure-ee/templates/compliance/compliance-server.yaml
@@ -61,6 +61,8 @@ metadata:
   labels:
     k8s-app: compliance-server
 spec:
+  nodeSelector:
+    beta.kubernetes.io/os: linux
   replicas: 1
   strategy:
      type: Recreate
