Use correct URL for health check

--- a/_includes/master/charts/tigera-secure-ee/templates/manager.yaml
+++ b/_includes/master/charts/tigera-secure-ee/templates/manager.yaml
@@ -376,7 +376,7 @@ spec:
         # cnx-manager-proxy.
         livenessProbe:
           httpGet:
-            path: /version
+            path: /tigera-elasticsearch/version
             port: 9443
             scheme: HTTPS
           initialDelaySeconds: 90
