Scaleloader: Playbooks update GNP namespace

--- a/mockdata/scaleloader/playbooks/internet-traffic/nonscaled/gnp-egress-with-net-set/00-init-gnp.yaml
+++ b/mockdata/scaleloader/playbooks/internet-traffic/nonscaled/gnp-egress-with-net-set/00-init-gnp.yaml
@@ -2,7 +2,7 @@ action: init
 kind: GlobalNetworkPolicy
 apiversion: projectcalico.org/v3
 metadata:
-  name: "{{.Namespace}}-egress-with-net-set"
+  name: "egress-with-net-set-ns-{{.Namespace}}"
 spec:
   selector: '{{.Namespace}}-egress-with-net-set == "yes"'
   egress:
