--- a/mockdata/scaleloader/playbooks/internet-traffic/nonscaled/gnp-ingress-with-net-set/00-init-gnp.yaml
+++ b/mockdata/scaleloader/playbooks/internet-traffic/nonscaled/gnp-ingress-with-net-set/00-init-gnp.yaml
@@ -2,7 +2,7 @@ action: init
 kind: GlobalNetworkPolicy
 apiversion: projectcalico.org/v3
 metadata:
-  name: "{{.Namespace}}-ingress-with-net-set"
+  name: "ingress-with-net-set-ns-{{.Namespace}}"
 spec:
   selector: '{{.Namespace}}-ingress-with-net-set == "yes"'
   ingress:
