--- a/mockdata/scaleloader/playbooks/internet-traffic/nonscaled/gnp-ingress-with-net-set/01-change-label.yaml
+++ b/mockdata/scaleloader/playbooks/internet-traffic/nonscaled/gnp-ingress-with-net-set/01-change-label.yaml
@@ -2,7 +2,7 @@ action: update
 kind: GlobalNetworkPolicy
 apiversion: projectcalico.org/v3
 metadata:
-  name: "{{.Namespace}}-ingress-with-net-set"
+  name: "ingress-with-net-set-ns-{{.Namespace}}"
   labels:
     churn-gnp: "knope"
 spec:
