--- a/mockdata/scaleloader/playbooks/namespace-in-out/nonscaled/gnp-ingress-from-nsb/00-init-gnp.yaml
+++ b/mockdata/scaleloader/playbooks/namespace-in-out/nonscaled/gnp-ingress-from-nsb/00-init-gnp.yaml
@@ -2,7 +2,7 @@ action: init
 kind: GlobalNetworkPolicy
 apiversion: projectcalico.org/v3
 metadata:
-  name: "{{.Namespace}}-ingress-from-nsb"
+  name: "ingress-from-nsb-ns-{{.Namespace}}"
 spec:
   selector: '{{.Namespace}}-ingress-from-nsb == "yes"'
   ingress:
