--- a/mockdata/scaleloader/playbooks/namespace-in-out/nonscaled/gnp-no-ingress-egress/02-add-label.yaml
+++ b/mockdata/scaleloader/playbooks/namespace-in-out/nonscaled/gnp-no-ingress-egress/02-add-label.yaml
@@ -2,7 +2,7 @@ action: update
 kind: GlobalNetworkPolicy
 apiversion: projectcalico.org/v3
 metadata:
-  name: "{{.Namespace}}-no-ingress-or-egress"
+  name: "no-ingress-or-egress-ns-{{.Namespace}}"
   labels:
     churn-gnp: "knope"
     parks: "and-recreation"
