--- a/mockdata/scaleloader/playbooks/unprotected-protected/nonscaled/gnp/01-change-label.yaml
+++ b/mockdata/scaleloader/playbooks/unprotected-protected/nonscaled/gnp/01-change-label.yaml
@@ -2,7 +2,7 @@ action: update
 kind: GlobalNetworkPolicy
 apiversion: projectcalico.org/v3
 metadata:
-  name: protect-egress
+  name: "protect-egress-ns-{{.Namespace}}"
   labels:
     churn-gnp: "knope"
 spec:
