--- a/_includes/v2.4/charts/tigera-secure-ee/templates/compliance/compliance-server.yaml
+++ b/_includes/v2.4/charts/tigera-secure-ee/templates/compliance/compliance-server.yaml
@@ -92,7 +92,7 @@ spec:
 {{ tuple .Values.complianceServer.resources | include "tigera-secure-ee.resourceLimits" | indent 10 -}}
           env:
             - name: LOG_LEVEL
-              value: "info"
+              value: "warning"
             - name: ELASTIC_INDEX_SUFFIX
               valueFrom:
                 configMapKeyRef:
