Open up UDP as well for alertmanager gossip.
Alertmanager versions since 0.15 require both TCP and UDP to port 6783
be opened up.

--- a/_includes/master/charts/tigera-secure-ee/templates/monitor-calico.yaml
+++ b/_includes/master/charts/tigera-secure-ee/templates/monitor-calico.yaml
@@ -136,6 +136,8 @@ spec:
     ports:
     - port: 6783
       protocol: TCP
+    - port: 6783
+      protocol: UDP
   podSelector:
     matchLabels:
       alertmanager: calico-node-alertmanager
