--- a/_includes/v2.4/charts/tigera-secure-ee/templates/monitor-calico.yaml
+++ b/_includes/v2.4/charts/tigera-secure-ee/templates/monitor-calico.yaml
@@ -136,6 +136,8 @@ spec:
     ports:
     - port: 6783
       protocol: TCP
+    - port: 6783
+      protocol: UDP
   podSelector:
     matchLabels:
       alertmanager: calico-node-alertmanager
