Make sure we always apply compliance access policy
Move compliance policy into manager manifest so that they are applied at
the same time. Before this, the policy was inside a helm template
conditional block that got excluded for BYO cluster install.

--- a/_includes/master/charts/tigera-secure-ee/templates/manager.yaml
+++ b/_includes/master/charts/tigera-secure-ee/templates/manager.yaml
@@ -478,3 +478,25 @@ spec:
       # By default, Tigera Secure EE Manager is accessed over https. Update this if needed.
       ports: [9443]
 ---
+
+# Allow internal communication to compliance-server from Manager.
+apiVersion: projectcalico.org/v3
+kind: NetworkPolicy
+metadata:
+  name: allow-cnx.compliance-server
+  namespace: calico-monitoring
+spec:
+  order: 1
+  tier: allow-cnx
+  selector: k8s-app == 'compliance-server'
+  types:
+  - Ingress
+  ingress:
+  - action: Allow
+    protocol: TCP
+    source:
+      selector: k8s-app == 'cnx-manager'
+    destination:
+      ports: [5443]
+
+---
