--- a/_includes/v2.3/manifests/calico-config.yaml
+++ b/_includes/v2.3/manifests/calico-config.yaml
@@ -9,8 +9,10 @@ calico-config.yaml acccepts the following include flags:
 | calico_ipam      | true, false                   |
 | variant_name     | Calico, Canal                 |
 | app_layer_policy | true, disabled, false         |
+| platform         | gke, <unset>                  |
 
 {% endcomment -%}
+{%- capture typha_service_name %}{% if include.platform == "gke" %}calico-typha-ee{% else %}calico-typha{% endif %}{% endcapture -%}
 # This ConfigMap is used to configure a self-hosted {{include.variant_name}} installation.
 kind: ConfigMap
 apiVersion: v1
@@ -30,7 +32,7 @@ data:
 {%- endif %}
 {%- if include.typha == "true" %}
   # You must set a non-zero value for Typha replicas below.
-  typha_service_name: "calico-typha"
+  typha_service_name: "{{ typha_service_name }}"
 {%- else %}
   # Typha is disabled.
   typha_service_name: "none"
