--- a/_includes/v2.3/manifests/calico-typha.yaml
+++ b/_includes/v2.3/manifests/calico-typha.yaml
@@ -1,5 +1,5 @@
 {% comment %}
-calico-typha.yaml acccepts the following include flags:
+{{ typha_service_name }}.yaml acccepts the following include flags:
 
 | Name         | Accepted Values               |
 |--------------|-------------------------------|
@@ -7,8 +7,10 @@ calico-typha.yaml acccepts the following include flags:
 | variant_name | Calico, Canal                 |
 | network      | calico, flannel, ecs, <unset> |
 | federation   | true, false                   |
+| platform     | gke, <unset>                  |
 
 {% endcomment -%}
+{%- capture typha_service_name %}{% if include.platform == "gke" %}{{ typha_service_name }}-ee{% else %}calico-typha{% endif %}{% endcapture -%}
 # This manifest creates a Service, which will be backed by Calico's Typha daemon.
 # Typha sits in between Felix and the API server, reducing Calico's load on the API server.
 # It is a requirement when using Kubernetes API datastore with more than 50 nodes, or when
@@ -17,18 +19,18 @@ calico-typha.yaml acccepts the following include flags:
 apiVersion: v1
 kind: Service
 metadata:
-  name: calico-typha
+  name: {{ typha_service_name }}
   namespace: kube-system
   labels:
-    k8s-app: calico-typha
+    k8s-app: {{ typha_service_name }}
 spec:
   ports:
     - port: 5473
       protocol: TCP
-      targetPort: calico-typha
-      name: calico-typha
+      targetPort: {{ typha_service_name }}
+      name: {{ typha_service_name }}
   selector:
-    k8s-app: calico-typha
+    k8s-app: {{ typha_service_name }}
 
 ---
 
@@ -37,10 +39,10 @@ spec:
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  name: calico-typha
+  name: {{ typha_service_name }}
   namespace: kube-system
   labels:
-    k8s-app: calico-typha
+    k8s-app: {{ typha_service_name }}
 spec:
   # Number of Typha replicas.  To enable Typha, set this to a non-zero value *and* set the
   # typha_service_name variable in the calico-config ConfigMap above.
@@ -53,7 +55,7 @@ spec:
   template:
     metadata:
       labels:
-        k8s-app: calico-typha
+        k8s-app: {{ typha_service_name }}
       annotations:
         # This, along with the CriticalAddonsOnly toleration below, marks the pod as a critical
         # add-on, ensuring it gets priority scheduling and that its resources are reserved
@@ -61,6 +63,21 @@ spec:
         scheduler.alpha.kubernetes.io/critical-pod: ''
         cluster-autoscaler.kubernetes.io/safe-to-evict: 'true'
     spec:
+# For HA and to avoid port clashes, avoid scheduling multiple Typha instances on the same node.
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            podAffinityTerm:
+              labelSelector:
+                matchExpressions:
+                - key: k8s-app
+                  operator: In
+                  values:
+                  # Avoid all variants of Typha that may be running.
+                  - calico-typha
+                  - calico-typha-ee
+              topologyKey: kubernetes.io/hostname
       nodeSelector:
         beta.kubernetes.io/os: linux
       hostNetwork: true
@@ -70,12 +87,16 @@ spec:
           operator: Exists
       # Since Calico can't network a pod until Typha is up, we need to run Typha itself
       # as a host-networked pod.
+{%- if include.platform == "gke" %}
+      serviceAccountName: calico-node-ee
+{%- else %}
       serviceAccountName: calico-node
+{%- endif %}
       imagePullSecrets:
         - name: cnx-pull-secret
       containers:
       - image: {{page.registry}}{{site.imageNames["typha"]}}:{{site.data.versions[page.version].first.components["typha"].version}}
-        name: calico-typha
+        name: {{ typha_service_name }}
 {%- if include.federation == "true" or include.datastore == "etcd" %}
         volumeMounts:
 {%- endif -%}
@@ -93,7 +114,7 @@ spec:
 {%- endif %}
         ports:
         - containerPort: 5473
-          name: calico-typha
+          name: {{ typha_service_name }}
           protocol: TCP
         env:
 {%- if include.network == "ecs" %}
@@ -146,6 +167,11 @@ spec:
 {%- endif %}
           - name: TYPHA_HEALTHENABLED
             value: "true"
+{%- if include.platform == "gke" %}
+          # On GKE, use non-standard health port to avoid clash with open-source.
+          - name: TYPHA_HEALTHPORT
+            value: "9198"
+{%- endif %}
           # Sets Default Security Groups if tigera-aws-config exists
           - name: TIGERA_DEFAULT_SECURITY_GROUPS
             valueFrom:
@@ -169,15 +195,18 @@ spec:
         livenessProbe:
           exec:
             command:
-            - calico-typha
+            - {{ typha_service_name }}
             - check
             - liveness
+{%- if include.platform == "gke" %}
+            - --port=9198
+{%- endif %}
           periodSeconds: 30
           initialDelaySeconds: 30
         readinessProbe:
           exec:
             command:
-            - calico-typha
+            - {{ typha_service_name }}
             - check
             - readiness
           periodSeconds: 10
@@ -208,12 +237,12 @@ spec:
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
-  name: calico-typha
+  name: {{ typha_service_name }}
   namespace: kube-system
   labels:
-    k8s-app: calico-typha
+    k8s-app: {{ typha_service_name }}
 spec:
   maxUnavailable: 1
   selector:
     matchLabels:
-      k8s-app: calico-typha
+      k8s-app: {{ typha_service_name }}
