--- a/_includes/v2.3/manifests/rbac.yaml
+++ b/_includes/v2.3/manifests/rbac.yaml
@@ -8,8 +8,15 @@ rbac.yaml acccepts the following include flags:
 | network      | calico, flannel, <unset> |
 | calico_ipam  | true, false              |
 | variant_name | Calico, Canal            |
+| platform     | gke, <unset>             |
 {% endcomment -%}
-
+{%- capture role_name -%}
+  {%- if include.platform == "gke" -%}
+    calico-node-ee
+  {%- else -%}
+    calico-node
+  {%- endif -%}
+{%- endcapture -%}
 {%- if include.datastore == "etcd" %}
 # Include a clusterrole for the kube-controllers component,
 # and bind it to the calico-kube-controllers serviceaccount.
@@ -55,11 +62,11 @@ subjects:
 ---
 {%- endif %}
 # Include a clusterrole for the calico-node DaemonSet,
-# and bind it to the calico-node serviceaccount.
+# and bind it to the {{ role_name }} serviceaccount.
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
-  name: calico-node
+  name: {{ role_name }}
 rules:
   # The CNI plugin needs to get pods, nodes, and namespaces.
   - apiGroups: [""]
@@ -180,14 +187,14 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
-  name: calico-node
+  name: {{ role_name }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: calico-node
+  name: {{ role_name }}
 subjects:
 - kind: ServiceAccount
-  name: calico-node
+  name: {{ role_name }}
   namespace: kube-system
 ---
 {%- if include.network == "flannel" %}
